--- a/video.css
+++ b/video.css
@@ -1,7 +1,7 @@
 header {
     position: relative;
     background-color: black;
-    height: 75vh;
+    height: 85vh;
     min-height: 25rem;
     width: 100%;
     overflow: hidden;
@@ -40,7 +40,7 @@ header {
   
   @media (pointer: coarse) and (hover: none) {
     header {
-      background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
+      background: url('img/as-prop/carousel.03.jpg') black no-repeat center center scroll;
     }
     header video {
       display: none;
