--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ header {
   
   @media (pointer: coarse) and (hover: none) {
     header {
-      background: url('img/as-prop/carousel.03.jpg') black no-repeat center center scroll;
+      background: url('/img/as-prop/carousel.03.jpg') black no-repeat center center scroll;
     }
     header video {
       display: none;
