--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 header {
     position: relative;
     background-color: black;
-    height: 85vh;
+    height: 50vh;
     min-height: 25rem;
     width: 100%;
     overflow: hidden;
@@ -47,3 +47,39 @@ header {
     }
   }
   
+body .svg {
+  position: absolute;
+  width: 500px;
+  top: 300px;
+  left: 50%;
+  margin-left: -250px;
+}
+
+.div-h1 {
+  background-color: rgba(255, 255, 255, 0.808); width: fit-content; padding: 2px; border-radius: 25px;
+}
+
+.titulo {
+  font-size: 3em;
+}
+
+.div-titulo {
+  position: absolute;
+  top: 80px; left: 90px;
+  z-index: 9;
+}
+
+@media screen and (max-width: 320px) {
+  body .svg {
+    width: 280px;
+    margin-left: -140px;
+  }
+
+  h1.titulo {
+    font-size: 1.5em;
+  }
+
+  .div-titulo {
+    left: 20px;
+  }
+}
